@@ -45,8 +45,9 @@ namespace tweek
  * interface).  Methods here should be invoked only via a reference to an
  * Subject object (Subject_ptr, Subject_var).
  */
-class TWEEK_CLASS_API SubjectImpl : virtual public POA_tweek::Subject,
-                                    public PortableServer::RefCountServantBase
+class TWEEK_API SubjectImpl
+   : virtual public POA_tweek::Subject
+   , public PortableServer::RefCountServantBase
 {
 public:
    SubjectImpl()
