@@ -35,7 +35,7 @@ namespace tweek
 
 const char* TWEEK_VERSION(__TWEEK_VERSION_STRING__);
 
-std::string getVersionString()
+const std::string getVersionString()
 {
    return std::string(TWEEK_VERSION);
 }
